feat: Add music library selection mode like Namida
- Long press to enable multi-selection
- Click to play song immediately
- Add menu button (3 dots) with context actions
- Selection action bar with Play All, Add to Queue, Select All
- Circular album art in track list
- Fix translation key txamusic_update_release_date format
- Add missing color txa_surface_variant

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">TXA Music</string>
+    <string name="txamusic_play_selected">Play Selected</string>
+    <string name="txamusic_add_to_queue">Add to Queue</string>
+    <string name="txamusic_select_all">Select All</string>
 </resources>
