--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,13 +143,11 @@
     <string name="txamusic_refresh_daily">Daily</string>
     <string name="txamusic_refresh_weekly">Weekly</string>
     
-    <!-- Widget (Home Screen - using native strings) -->
-    <string name="widget_name">TXA Music</string>
-    <string name="widget_description">Control your music from home screen</string>
-    <string name="txamusic_album_art">Album art</string>
-    <string name="txamusic_shuffle">Shuffle</string>
-    <string name="txamusic_previous">Previous</string>
-    <string name="txamusic_play_pause">Play/Pause</string>
-    <string name="txamusic_next">Next</string>
-    <string name="txamusic_repeat">Repeat</string>
+    <string name="txamusic_widget_category">TXA Music</string>
+    <string name="widget_classic_name">TXA Classic</string>
+    <string name="widget_classic_desc">Standard music control with progress bar</string>
+    <string name="widget_small_name">TXA Mini</string>
+    <string name="widget_small_desc">Compact bar with basic music controls</string>
+    <string name="widget_big_name">TXA Jumbo</string>
+    <string name="widget_big_desc">Large widget with full controls and big artwork</string>
 </resources>
