Upgrade all widgets to Premium Glassmorphism UI and add TXA Circle widget - Refactored Classic, Mini, and Jumbo layouts to match high-fidelity previews - Added new TXA Circle (2x2) minimalist vinyl-style widget - Implemented dark glass backgrounds, gradient progress bars, and rounded aesthetics - Standardized widget labeling for optimal system recognition in Android 12+ picker

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -169,4 +169,6 @@
     <string name="widget_small_desc">Thanh điều khiển nhỏ gọn, tiết kiệm không gian</string>
     <string name="widget_big_name">TXA Khổng lồ (Jumbo)</string>
     <string name="widget_big_desc">Widget lớn với hình nền to và đầy đủ phím bấm</string>
+    <string name="widget_circle_name">TXA Đĩa nhạc (Circle)</string>
+    <string name="widget_circle_desc">Trình phát nhạc hình tròn tối giản</string>
 </resources>
